fixFilterNameSpacing

--- a/src/client/app/resultH/filterComponent/searchName/searchName.sass
+++ b/src/client/app/resultH/filterComponent/searchName/searchName.sass
@@ -43,7 +43,7 @@
           background-color: $amBlueButtonHover
           text-shadow: 0 1px 7px $amLinkHoverBlue
         @media only screen and (min-width: 768px)
-          margin-left: 18px
+          margin-left: 14px
         background-color: $amBlueButton
         transition: background-color 1s ease
         color: #ffffff
